Bad indentation in backport of JDK-8250825

XMLWordPrintable

    • b01
    • b03
    • generic
    • generic

        The backport of JDK-8250825 did not correct the indentation of the basic_elem_type == T_ARRAY line to match the new line above, as in the 11u backport.

        $ diff -u ../jdk11u-dev/src/hotspot/share/opto/type.cpp hotspot/src/share/vm/opto/type.cpp|grep basic_elem
                     BasicType basic_elem_type = field->layout_type();
                     _is_ptr_to_narrowoop = UseCompressedOops && (basic_elem_type == T_OBJECT ||
        - basic_elem_type == T_ARRAY);
        + basic_elem_type == T_ARRAY);

        See https://hg.openjdk.org/jdk-updates/jdk11u/rev/c7468cba62a0#l1.23
        vs https://github.com/openjdk/jdk8u-dev/commit/8b08668b22c3d0eb52e3b27b2aecd725d670a345#diff-440e70514ef178f5414824eca4b93443904324f986b197123975eacdbbb2c0ffR2561

              Assignee:
              Sendao Yan
              Reporter:
              Andrew Hughes
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: