8349166: Bad indentation in backport of JDK-8250825

Reviewed-by: andrew